# ChangeLog for sys-apps/grep
# Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-apps/grep/ChangeLog,v 1.43 2005/02/20 01:32:30 solar Exp $

  19 Feb 2005; <solar@gentoo.org> grep-2.5.1-r7.ebuild:
  - bug 76879 broke maketest on uClibc hosts. for now make the patching
  conditional

  17 Feb 2005; Kito <kito@gentoo.org> grep-2.5.1-r6.ebuild:
  ~ppc-macos keyword

  07 Jan 2005; Mike Frysinger <vapier@gentoo.org> files/2.5.1-tests.patch:
  Update tests so that grep+glibc dont get stuck in an infinite loop #76879 by
  Patrick Lauer.

*grep-2.5.1-r7 (06 Jan 2005)

  06 Jan 2005; Mike Frysinger <vapier@gentoo.org>
  +files/2.5.1-tests.patch, +files/2.5.1-utf8-case.patch,
  +grep-2.5.1-r7.ebuild:
  Fix UTF8 case matching with a patch from Debian #76192 by Michael Mauch.
  Also update one of the tests to fix #63507 by Daniel Black.

  02 Jan 2005; Ciaran McCreesh <ciaranm@gentoo.org> :
  Change encoding to UTF-8 for GLEP 31 compliance

  30 Sep 2004; Bryan Østergaard,,, <kloeri@gentoo.org> grep-2.5.1-r6.ebuild:
  Stable on alpha.

  26 Sep 2004; Danny van Dyk <kugelfang@gentoo.org> grep-2.5.1-r6.ebuild:
  Marked stable on amd64.

  25 Sep 2004; Joshua Kinard <kumba@gentoo.org> grep-2.5.1-r6.ebuild:
  Marked stable on mips.

  09 Sep 2004; Gustavo Zacarias <gustavoz@gentoo.org> grep-2.5.1-r6.ebuild:
  Stable on sparc

  24 Aug 2004; Sven Wegener <swegener@gentoo.org> grep-2.5.1-r1.ebuild,
  grep-2.5.1-r4.ebuild, grep-2.5.1-r5.ebuild, grep-2.5.1-r6.ebuild:
  Removed http://ftp.club.cc.cmu.edu/pub/gnu from SRC_URI as it's already used
  with mirror://gnu

*grep-2.5.1-r6 (20 Aug 2004)

  20 Aug 2004; Tavis Ormandy <taviso@gentoo.org>
  +files/2.5.1-manpage-line-buffering.diff, +grep-2.5.1-r6.ebuild:
  fix manpage reference to --line-buffering

*grep-2.5.1-r5 (19 Aug 2004)

  19 Aug 2004; Heinrich Wendel <lanius@gentoo.org> grep-2.5.1-r5.ebuild,
  files/grep-2.5.1-fgrep.patch.bz2, files/grep-2.5.1-gofast.patch.bz2,