@@ -1,8 +1,8 @@
 # Copyright 1999-2005 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/grep/Attic/grep-2.5.1-r6.ebuild,v 1.12 2005/02/18 03:56:50 kito Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/grep/Attic/grep-2.5.1-r6.ebuild,v 1.13 2005/03/22 08:06:30 eradicator Exp $
 
-inherit gnuconfig flag-o-matic eutils
+inherit gnuconfig flag-o-matic eutils multilib
 
 DESCRIPTION="GNU regular expression matcher"
 HOMEPAGE="http://www.gnu.org/software/grep/grep.html"
@@ -63,7 +63,7 @@ src_compile() {
 	econf ${myconf} || die "econf failed"
 
 	if use pcre && ! use uclibc ; then
-		sed -i -e 's:-lpcre:/usr/lib/libpcre.a:g' {lib,src}/Makefile \
+		sed -i -e "s:-lpcre:/usr/$(get_libdir)/libpcre.a:g" {lib,src}/Makefile \
 			|| die "sed Makefile failed"
 	fi
 
